Moved observers, coffee machines and orders to synchronized collections